# PDF-OCR-Text-Extractor

./: .env.example  .gitignore  .renderignore  DEPLOYMENT_STATUS.md  Dockerfile  EMAIL_VERIFICATION_SETUP.md  FIX_TESSERACT_NOW.md  FRONTEND_INTEGRATION.md  IMPLEMENTATION_CHECKLIST.md  LOCAL_DEMO_INSTRUCTIONS.txt  OCR_TESTING_VERIFIED.md  OCR_UPLOAD_GUIDE.md  PAGES_CREATION_SUMMARY.md  README.md  RENDER_TESSERACT_FIX.md  SITE_MAP.md  SWAGGER_TESTS.txt  TESTING_EMAIL_VERIFICATION.md  build.sh  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt  structure.txt  test_complete_auth_flow.sh  test_email_verification.sh  test_ocr_flow.sh
app/core/: config.py  database.py  dependencies.py  exceptions.py  security.py
app/middleware/: rate_limit_middleware.py
app/models/: user.py
app/routers/: auth.py  ocr.py  pages.py  users.py
app/schemas/: __init__.py  auth.py  ocr.py  schemas.py  user.py
app/services/: auth_service.py  email_service.py  file_service.py  ocr_service.py  preprocessing.py
app/utils/: file_handlers.py
docker/: Dockerfile  docker-compose.yml
static/: hero.css  hero.js  navigation  style  text
templates/: callback.html  dashboard.html  document.html  email_verification.html  features.html  forgot_password.html  hero.html  history.html  login.html  processing.html  results.html  set_new_password.html  settings.html  signup.html  startup.html  upload.html
test/: run_app.md
