[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-ocr-extractor"
version = "1.0.0"
description = "PDF OCR Text Extractor - FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "aiosmtplib==3.0.1",
    "alembic==1.13.1",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "Authlib==1.3.0",
    "bcrypt==4.1.2",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cryptography==46.0.3",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "fastapi==0.109.0",
    "greenlet==3.3.0",
    "gunicorn==21.2.0",
    "h11==0.16.0",
    "hiredis==2.3.2",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.26.0",
    "idna==3.11",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.3",
    "Mako==1.3.10",
    "MarkupSafe==3.0.3",
    "numpy==1.26.4",
    "opencv-python==4.8.1.78",
    "packaging==25.0",
    "pdf2image==1.16.3",
    "pillow==10.0.1",
    "pyasn1==0.6.1",
    "pycparser==2.23",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "python-jose==3.3.0",
    "python-multipart==0.0.6",
    "PyYAML==6.0.3",
    "redis==5.0.1",
    "requests==2.31.0",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.25",
    "starlette==0.35.1",
    "typing_extensions==4.15.0",
    "urllib3==2.6.2",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]
